# pykaleidescape

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.cfg  tox.ini
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml  python-app.yml
examples/: basic.py  events.py  monitor_events.py  simple.py  volume.py
kaleidescape/: __init__.py  connection.py  const.py  device.py  dispatcher.py  error.py  kaleidescape.py  message.py
tests/: __init__.py  conftest.py  emulator.py  emulator_interactive.py  readme_basic.py  readme_events.py  test_a_message.py  test_b_connection.py  test_c_command.py  test_d_device.py  test_e_kaleidescape.py
tests/fixtures/: coplay_encore_system.json  coplay_premier_system.json  movies.json  multi_device.json  multi_device_cpdid.json  server_system.json  single_device.json
