[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
log_level = "DEBUG"
testpaths = "tests"
norecursedirs = ".git"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:.*loop argument is deprecated:DeprecationWarning"
]

[tool.ruff]
required-version = ">=0.6.7"
lint.extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
disable_error_code = "annotation-unchecked"