[project]
name = "pykaleidescape"
dynamic = ["version"]
description = "A python client library for the Kaleidescape System Control Protocol."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Steve Easley", email = "tardis74@yahoo.com" },
]
urls = { "Homepage" = "https://github.com/SteveEasley/pykaleidescape" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiohttp>=3.13.2",
    "aiodns>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.3.0",
    "mypy>=1.19.0",
    "pylint==4.0.4",
    "pytest-asyncio>=0.24.0",
    "pytest>=9.0.1",
    "ruff>=0.14.8",
    "tox>=4.32.0",
    "twine>=6.2.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kaleidescape"]

[tool.setuptools.package-data]
kaleidescape = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "kaleidescape.__version__" }

[tool.pytest.ini_options]
log_level = "DEBUG"
testpaths = "tests"
norecursedirs = ".git"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:.*loop argument is deprecated:DeprecationWarning"
]

[tool.ruff]
required-version = ">=0.6.7"
lint.extend-select = ["I"]
lint.ignore = ["E722"]

[tool.mypy]
disable_error_code = "annotation-unchecked"

[tool.pylint]
disable = [
    "too-few-public-methods",
    "too-many-branches",
    "too-many-lines",
    "too-many-public-methods",
    "too-many-instance-attributes",
    "too-many-arguments",
    "too-many-positional-arguments",
    "duplicate-code"
]
