[project]
name = "pykaleidescape"
dynamic = ["version"]
description = "A python client library for the Kaleidescape System Control Protocol."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Steve Easley", email = "tardis74@yahoo.com" },
]
urls = { "Homepage" = "https://github.com/SteveEasley/pykaleidescape" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = [
    "build>=1.3.0,<2.0.0",
    "mypy>=1.19.0,<2.0.0",
    "pylint>=4.0.4,<5.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest>=9.0.2,<10.0.0",
    "ruff>=0.14.9,<1.0.0",
    "tox>=4.44.0,<5.0.0",
    "twine>=6.2.0,<7.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kaleidescape"]

[tool.setuptools.package-data]
kaleidescape = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "kaleidescape.__version__" }

[tool.pytest.ini_options]
log_level = "DEBUG"
testpaths = "tests"
norecursedirs = ".git"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:.*loop argument is deprecated:DeprecationWarning"
]

[tool.ruff]
required-version = ">=0.14.8"
exclude = ["examples"]
lint.extend-select = ["I"]
lint.ignore = ["E722"]

[tool.mypy]
disable_error_code = "annotation-unchecked"

[tool.pylint]
disable = [
    "duplicate-code",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-positional-arguments",
    "too-many-public-methods",
]
