[metadata]
name = pykaleidescape
version = attr: kaleidescape.__version__
description = "A python client library for the Kaleidescape System Control Protocol."
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/SteveEasley/pykaleidescape
author = Steve Easley
author_email = tardis74@yahoo.com
licence = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Home Automation
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = kaleidescape
install_requires =
    aiohttp >= 3.8.0
    dnspython >= 2.1.0
