[metadata]
name = pykaleidescape
version = attr: kaleidescape.__version__
description = "A python client library for the Kaleidescape System Control Protocol."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SteveEasley/pykaleidescape
author = Steve Easley
author_email = tardis74@yahoo.com
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Home Automation
    Topic :: Software Development :: Libraries
    Programming Language :: Python :: 3.13

[options]
packages = kaleidescape
install_requires =
    aiohttp>=3.13.2
    aiodns>=3.5.0

[options.extras_require]
dev =
    mypy>=1.19.0
    pytest>=9.0.1
    pytest-asyncio>=0.24.0
    tox>=4.20.0
    ruff>=0.14.8
    build>=1.3.0
    twine>=6.2.0

[options.package_data]
kaleidescape = py.typed